--- a/package.json
+++ b/package.json
@@ -9,15 +9,13 @@
     "dist:dir": "yarn dist --dir -c.compression=store -c.mac.identity=null"
   },
   "dependencies": {
-    "source-map-support": "^0.5.4"
+    "source-map-support": "^0.5.9"
   },
   "devDependencies": {
-    "electron": "1.8.4",
-    "electron-builder": "^20.8.1",
-    "electron-webpack": "^2.0.1",
-    "webpack": "^4.4.1"
-  },
-  "resolutions": {
-    "webpack-sources": "1.0.1"
+    "electron": "^2.0.8",
+    "electron-builder": "^20.28.3",
+    "electron-webpack": "^2.3.1",
+    "webpack": "^4.17.1",
+    "webpack-sources": "^1.2.0"
   }
 }
